GENTBE-1133: fixing disappearing of search form on tablet and mobile
Conflicts:
	sass/components/_header.scss

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -241,32 +241,3 @@
     @include grid-span(13, 12);
   }
 }
-
-.not-front {
-  .search-widget {
-    &> div {
-      display: none;
-      @include mq($bp-tablet-s) {
-        border-top: 1px solid #3f5b68;
-        margin-top:6px;
-        padding-top: 6px;
-      }
-      @include mq($bp-tablet-m) {
-        border-top: none;
-        margin-top:0;
-        padding-top: 0;
-      }
-      @include mq($bp-tablet-m) {
-        display: block;
-      }
-    }
-  }
-}
-
-.not-front.page-zoeken  {
-  .search-widget {
-    &> div {
-      display: block;
-    }
-  }
-}
